--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -4,18 +4,19 @@ on:
   schedule:
     - cron: '*/15 * * * *'  # Runs every 15 minutes
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+  jobs: 
+    run-hello-script: 
+      runs-on: ubuntu-latest 
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11' 
+      steps:
+        - name: Checkout repository
+          uses: actions/checkout@v2
 
-    - name: Run script
-      run: python hello.py
+        - name: Set up Python
+          uses: actions/setup-python@v4
+          with:
+              python-version: '3.11' 
+
+        - name: Run script
+          run: python hello.py
