--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -3,7 +3,7 @@ name: Daily Web Scraper
 on:
   schedule:
     # Schedule to run daily at 0:00 UTC
-    - cron:  '0 0 * * *'
+    - cron:  '*/10 * * * *'
 
 jobs:
   scrape:
