Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_yuweihe-techin510-lab4.yml
+++ b/.github/workflows/main_yuweihe-techin510-lab4.yml
@@ -49,7 +49,9 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+    permissions:
+      id-token: write #This is required for requesting the JWT
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
@@ -60,10 +62,17 @@ jobs:
         run: unzip release.zip
 
       
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_3CAAC68F38A84CCA97D64D4E4234D276 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_D720BCE6CCBB4AA483299BDCD53F6C00 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_C1013E7466074B439C197E7E7B109CAF }}
+
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
           app-name: 'yuweihe-techin510-lab4'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3BF0BEA8DC92416DA04AF84E2D77B417 }}
+          
